force-app/main/default/objects/Queueable_Log_Item__c/Queueable_Log_Item__c.object-meta.xml
<CustomObject>
    <label>Queueable Log Item</label>
    <nameField>
        <displayFormat>QLT-{0000}</displayFormat>
        <label>Queueable Log Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queueable Log Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>