force-app/main/default/objects/Queueable_Log_Item__c/fields/Apex_JobId__c.field-meta.xml
<CustomField>
    <fullName>Apex_JobId__c</fullName>
    <description>Field to store Apex Job ID</description>
    <label>Apex JobId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>