force-app/main/default/objects/Queueable_Log_Item__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Field to store Error Message in the logs</description>
    <label>Error Message</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>