force-app/main/default/objects/Queueable_Log_Item__c/fields/Queueable_Log__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Log__c</fullName>
    <description>Master-Detail relation to Queueable Log</description>
    <label>Queueable Log</label>
    <referenceTo>Queueable_Log__c</referenceTo>
    <relationshipLabel>Queueable Log Items</relationshipLabel>
    <relationshipName>Queueable_Log_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>