force-app/main/default/objects/Queueable_Log_Item__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
	<defaultValue>0</defaultValue>
    <description>Field created to keep a track of number of retries done on the queueable with exception</description>
    <label>Retry Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>