force-app/main/default/objects/Queueable_Log_Item__c/fields/Satus__c.field-meta.xml
<CustomField>
    <fullName>Satus__c</fullName>
    <description>Indicates whether the Status is Success/Failed/Queued</description>
    <label>Satus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>