force-app/main/default/objects/Queueable_Log_Item__c/listViews/Queueable_Log_Items.listView-meta.xml
<ListView>
    <fullName>Queueable_Log_Items</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Queueable_Log__c</columns>
    <columns>Satus__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>Queueable Log Items</label>
    <language>en_US</language>
</ListView>